apps page spacing fix

--- a/frontend/website-client/src/components/panels/app-teaser.scss
+++ b/frontend/website-client/src/components/panels/app-teaser.scss
@@ -43,30 +43,14 @@
 
 a.button-appstore {
   width: 100%;
-  height: 40px;
+  height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
-  
-  @include media-breakpoint-up(md) { 
-    height: 70px
-  }
-  
-  @include media-breakpoint-up(xl) { 
-    height: 80px
-  }
 }
 
 a.button-googleplay {
   width: 100%;
-  height: 40px;
+  height: 100%;
   background-size: contain;
   background-repeat: no-repeat; 
-  
-  @include media-breakpoint-up(md) { 
-    height: 70px
-  }
-  
-  @include media-breakpoint-up(xl) { 
-    height: 80px
-  }
 }
